ruby/sambamba.h

/* --------------------- Main types used throughout ------------------------- */

/* In D, the array layout is as follows */
typedef struct { char* buf; size_t len; } dstring_s;
typedef struct { int8_t* buf; size_t len; } aint8_s;
typedef void* bam_reader_t; /* BAM reader object */
typedef struct {
    size_t len;          /* length of raw data */
    uint8_t* buf;  /* raw data */
    bam_reader_t reader; /* parent reader */
} bam_read_s;
                   
typedef bam_read_s* bam_read_t; /* single read */
typedef struct {
    uint8_t* buf;
    size_t len;
} buffer_s;
 

/* automatically resizes the qualities to the length of the sequence
   and sets them all to 0xFF (i.e. missing) */
buffer_s* df_bam_read_set_sequence(bam_read_t, const char* new_sequence);
aint8_s bam_read_base_qualities(const bam_read_t);
buffer_s* df_bam_read_set_base_qualities(bam_read_t, int8_t* buf, size_t len);
dstring_s bam_read_name(const bam_read_s*);
buffer_s* df_bam_read_set_name(bam_read_t, const char* new_name);
int8_t bam_read_mapping_quality(const bam_read_t); /* -1 if missing */
void bam_read_set_mapping_quality(bam_read_t, int8_t);
int32_t bam_read_ref_id(const bam_read_t);
void bam_read_set_ref_id(bam_read_t, int32_t);
char* bam_read_reference_name(const bam_read_t);   /* zero-terminated */
/* zero-based position on the reference */
int32_t bam_read_position(const bam_read_t);
       
void bam_read_set_position(bam_read_t, int32_t);
int32_t bam_read_mate_ref_id(const bam_read_t);
void bam_read_set_mate_ref_id(bam_read_t, int32_t);
int32_t bam_read_mate_position(const bam_read_t);  /* zero-based */
void bam_read_set_mate_position(bam_read_t, int32_t);
uint16_t bam_read_flag(const bam_read_t);
void bam_read_set_flag(bam_read_t, uint16_t);
int32_t bam_read_template_length(const bam_read_t);
void bam_read_set_template_length(bam_read_t, int32_t);
typedef struct { uint32_t* buf; size_t len; } cigar_s;
uint32_t bam_cigar_operation_length(uint32_t);
char bam_cigar_operation_type(uint32_t);           /* MIDNSHP=X */
bool bam_cigar_operation_consumes_ref(uint32_t);   /* types M=XDN */
bool bam_cigar_operation_consumes_query(uint32_t); /* types M=XIS */
bool bam_cigar_operation_consumes_both(uint32_t);  /* types M=X */
cigar_s bam_read_cigar(const bam_read_t);
cigar_s f_bam_read_extended_cigar(const bam_read_t);
buffer_s* df_bam_read_set_cigar(bam_read_t, uint32_t* buf, size_t len);
/* read flags */
bool bam_read_is_paired(const bam_read_t);
bool bam_read_proper_pair(const bam_read_t);
bool bam_read_is_unmapped(const bam_read_t);
bool bam_read_mate_is_unmapped(const bam_read_t);
bool bam_read_is_reverse_strand(const bam_read_t);
bool bam_read_mate_is_reverse_strand(const bam_read_t);
bool bam_read_is_first_of_pair(const bam_read_t);
bool bam_read_is_second_of_pair(const bam_read_t);
bool bam_read_is_secondary_alignment(const bam_read_t);
bool bam_read_failed_quality_control(const bam_read_t);
bool bam_read_is_duplicate(const bam_read_t);
void bam_read_set_is_paired(bam_read_t, bool);
void bam_read_set_proper_pair(bam_read_t, bool);
void bam_read_set_is_unmapped(bam_read_t, bool);
void bam_read_set_mate_is_unmapped(bam_read_t, bool);
void bam_read_set_is_reverse_strand(bam_read_t, bool);
void bam_read_set_mate_is_reverse_strand(bam_read_t, bool);