ruby/sambamba-ffi.rb

  
  # automatically resizes the qualities to the length of the sequence
  #    and sets them all to 0xFF (i.e. missing)
  # 
  # @method df_bam_read_set_sequence(bam_read_s, new_sequence)
  # @param [BamReadS] bam_read_s 
  # @param [String] new_sequence 
  # @return [BufferS] 
  # @scope class
  attach_function :df_bam_read_set_sequence, :df_bam_read_set_sequence, [BamReadS, :string], BufferS
  
  # (Not documented)
  # 
  # @method bam_read_base_qualities(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Aint8S] 
  # @scope class
  attach_function :bam_read_base_qualities, :bam_read_base_qualities, [BamReadS], Aint8S.by_value
  
  # (Not documented)
  # 
  # @method df_bam_read_set_base_qualities(bam_read_s, buf, len)
  # @param [BamReadS] bam_read_s 
  # @param [FFI::Pointer(*Int8T)] buf 
  # @param [Integer] len 
  # @return [BufferS] 
  # @scope class
  attach_function :df_bam_read_set_base_qualities, :df_bam_read_set_base_qualities, [BamReadS, :pointer, :ulong], BufferS
  
  # (Not documented)
  # 
  # @method bam_read_name(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [DstringS] 
  # @scope class
  attach_function :bam_read_name, :bam_read_name, [BamReadS], DstringS.by_value
  
  # (Not documented)
  # 
  # @method df_bam_read_set_name(bam_read_s, new_name)
  # @param [BamReadS] bam_read_s 
  # @param [String] new_name 
  # @return [BufferS] 
  # @scope class
  attach_function :df_bam_read_set_name, :df_bam_read_set_name, [BamReadS, :string], BufferS
  
  # (Not documented)
  # 
  # @method bam_read_mapping_quality(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_mapping_quality, :bam_read_mapping_quality, [BamReadS], :char
  
  # -1 if missing
  # 
  # @method bam_read_set_mapping_quality(bam_read_s, s_char)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] s_char 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_mapping_quality, :bam_read_set_mapping_quality, [BamReadS, :char], :void
  
  # (Not documented)
  # 
  # @method bam_read_ref_id(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_ref_id, :bam_read_ref_id, [BamReadS], :int
  
  # (Not documented)
  # 
  # @method bam_read_set_ref_id(bam_read_s, int)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] int 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_ref_id, :bam_read_set_ref_id, [BamReadS, :int], :void
  
  # (Not documented)
  # 
  # @method bam_read_reference_name(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [String] 
  # @scope class
  attach_function :bam_read_reference_name, :bam_read_reference_name, [BamReadS], :string
  
  # zero-based position on the reference
  # 
  # @method bam_read_position(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_position, :bam_read_position, [BamReadS], :int
  
  # (Not documented)
  # 
  # @method bam_read_set_position(bam_read_s, int)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] int 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_position, :bam_read_set_position, [BamReadS, :int], :void
  
  # (Not documented)
  # 
  # @method bam_read_mate_ref_id(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_mate_ref_id, :bam_read_mate_ref_id, [BamReadS], :int
  
  # (Not documented)
  # 
  # @method bam_read_set_mate_ref_id(bam_read_s, int)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] int 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_mate_ref_id, :bam_read_set_mate_ref_id, [BamReadS, :int], :void
  
  # (Not documented)
  # 
  # @method bam_read_mate_position(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_mate_position, :bam_read_mate_position, [BamReadS], :int
  
  # zero-based
  # 
  # @method bam_read_set_mate_position(bam_read_s, int)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] int 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_mate_position, :bam_read_set_mate_position, [BamReadS, :int], :void
  
  # (Not documented)
  # 
  # @method bam_read_flag(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_flag, :bam_read_flag, [BamReadS], :ushort
  
  # (Not documented)
  # 
  # @method bam_read_set_flag(bam_read_s, u_short)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] u_short 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_flag, :bam_read_set_flag, [BamReadS, :ushort], :void
  
  # (Not documented)
  # 
  # @method bam_read_template_length(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_template_length, :bam_read_template_length, [BamReadS], :int
  
  # (Not documented)
  # 
  # @method bam_read_set_template_length(bam_read_s, int)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] int 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_template_length, :bam_read_set_template_length, [BamReadS, :int], :void
  
  # (Not documented)
  # 
  # = Fields:
  # :buf ::
  #   (FFI::Pointer(*Uint32T)) 
  # :len ::
  #   (Integer) 
  class CigarS < FFI::Struct
    layout :buf, :pointer,
           :len, :ulong
  end
  
  # (Not documented)
  # 
  # @method bam_cigar_operation_length(u_int)
  # @param [Integer] u_int 
  # @return [Integer] 
  # @scope class
  attach_function :bam_cigar_operation_length, :bam_cigar_operation_length, [:uint], :uint
  
  # (Not documented)
  # 
  # @method bam_cigar_operation_type(u_int)
  # @param [Integer] u_int 
  # @return [Integer] 
  # @scope class
  attach_function :bam_cigar_operation_type, :bam_cigar_operation_type, [:uint], :char
  
  # MIDNSHP=X
  # 
  # @method bam_cigar_operation_consumes_ref(u_int)
  # @param [Integer] u_int 
  # @return [Integer] 
  # @scope class
  attach_function :bam_cigar_operation_consumes_ref, :bam_cigar_operation_consumes_ref, [:uint], :int
  
  # types M=XDN
  # 
  # @method bam_cigar_operation_consumes_query(u_int)
  # @param [Integer] u_int 
  # @return [Integer] 
  # @scope class
  attach_function :bam_cigar_operation_consumes_query, :bam_cigar_operation_consumes_query, [:uint], :int
  
  # types M=XIS
  # 
  # @method bam_cigar_operation_consumes_both(u_int)
  # @param [Integer] u_int 
  # @return [Integer] 
  # @scope class
  attach_function :bam_cigar_operation_consumes_both, :bam_cigar_operation_consumes_both, [:uint], :int
  
  # types M=X
  # 
  # @method bam_read_cigar(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [CigarS] 
  # @scope class
  attach_function :bam_read_cigar, :bam_read_cigar, [BamReadS], CigarS.by_value
  
  # (Not documented)
  # 
  # @method f_bam_read_extended_cigar(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [CigarS] 
  # @scope class
  attach_function :f_bam_read_extended_cigar, :f_bam_read_extended_cigar, [BamReadS], CigarS.by_value
  
  # (Not documented)
  # 
  # @method df_bam_read_set_cigar(bam_read_s, buf, len)
  # @param [BamReadS] bam_read_s 
  # @param [FFI::Pointer(*Uint32T)] buf 
  # @param [Integer] len 
  # @return [BufferS] 
  # @scope class
  attach_function :df_bam_read_set_cigar, :df_bam_read_set_cigar, [BamReadS, :pointer, :ulong], BufferS
  
  # read flags
  # 
  # @method bam_read_is_paired(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_is_paired, :bam_read_is_paired, [BamReadS], :int
  
  # (Not documented)
  # 
  # @method bam_read_proper_pair(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_proper_pair, :bam_read_proper_pair, [BamReadS], :int
  
  # (Not documented)
  # 
  # @method bam_read_is_unmapped(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_is_unmapped, :bam_read_is_unmapped, [BamReadS], :int
  
  # (Not documented)
  # 
  # @method bam_read_mate_is_unmapped(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_mate_is_unmapped, :bam_read_mate_is_unmapped, [BamReadS], :int
  
  # (Not documented)
  # 
  # @method bam_read_is_reverse_strand(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_is_reverse_strand, :bam_read_is_reverse_strand, [BamReadS], :int
  
  # (Not documented)
  # 
  # @method bam_read_mate_is_reverse_strand(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_mate_is_reverse_strand, :bam_read_mate_is_reverse_strand, [BamReadS], :int
  
  # (Not documented)
  # 
  # @method bam_read_is_first_of_pair(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_is_first_of_pair, :bam_read_is_first_of_pair, [BamReadS], :int
  
  # (Not documented)
  # 
  # @method bam_read_is_second_of_pair(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_is_second_of_pair, :bam_read_is_second_of_pair, [BamReadS], :int
  
  # (Not documented)
  # 
  # @method bam_read_is_secondary_alignment(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_is_secondary_alignment, :bam_read_is_secondary_alignment, [BamReadS], :int
  
  # (Not documented)
  # 
  # @method bam_read_failed_quality_control(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_failed_quality_control, :bam_read_failed_quality_control, [BamReadS], :int
  
  # (Not documented)
  # 
  # @method bam_read_is_duplicate(bam_read_s)
  # @param [BamReadS] bam_read_s 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_is_duplicate, :bam_read_is_duplicate, [BamReadS], :int
  
  # (Not documented)
  # 
  # @method bam_read_set_is_paired(bam_read_s, int)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] int 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_is_paired, :bam_read_set_is_paired, [BamReadS, :int], :void
  
  # (Not documented)
  # 
  # @method bam_read_set_proper_pair(bam_read_s, int)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] int 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_proper_pair, :bam_read_set_proper_pair, [BamReadS, :int], :void
  
  # (Not documented)
  # 
  # @method bam_read_set_is_unmapped(bam_read_s, int)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] int 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_is_unmapped, :bam_read_set_is_unmapped, [BamReadS, :int], :void
  
  # (Not documented)
  # 
  # @method bam_read_set_mate_is_unmapped(bam_read_s, int)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] int 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_mate_is_unmapped, :bam_read_set_mate_is_unmapped, [BamReadS, :int], :void
  
  # (Not documented)
  # 
  # @method bam_read_set_is_reverse_strand(bam_read_s, int)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] int 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_is_reverse_strand, :bam_read_set_is_reverse_strand, [BamReadS, :int], :void
  
  # (Not documented)
  # 
  # @method bam_read_set_mate_is_reverse_strand(bam_read_s, int)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] int 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_mate_is_reverse_strand, :bam_read_set_mate_is_reverse_strand, [BamReadS, :int], :void
